ecmascript/parser/tests/test262-error-references/fail/b3fc8ced7ce28c35.js.stderr
error: Unterminated string constant
 --> $DIR/tests/test262-parser/fail/b3fc8ced7ce28c35.js:1:5
  |
1 | ('\x')
  |     ^^

